<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/detailSchoolPicture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/rect_round"
        app:layout_constraintBottom_toTopOf="@id/schoolPictureGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/schoolPictureGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/detailSchoolPicture" />

    <android.support.constraint.Guideline
        android:id="@+id/schoolGeneralInfoGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/detailSchoolPicture"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.v7.widget.CardView
        android:id="@+id/schoolGeneralInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/schoolGeneralHeight"
        android:layout_margin="@dimen/small_margin_horizontal"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/schoolGeneralInfoGuideline">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rect_round_white"
            android:paddingBottom="5dp">


            <TextView
                android:id="@+id/detailsschoolName"
                style="@style/largeTextBlack"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/small_margin_horizontal"
                android:text="مدرسه"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@id/detailsschoolAddress"
                app:layout_constraintLeft_toRightOf="@id/detailsheartCircle"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="12" />

            <TextView
                android:id="@+id/detailsaddress"
                style="@style/middleTextBlack"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:paddingRight="@dimen/middle_margin_horizontal"
                android:text="@string/address"
                app:layout_constraintBottom_toBottomOf="@id/detailsschoolAddress"
                app:layout_constraintLeft_toRightOf="@id/detailsschoolAddress"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/detailsschoolAddress"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/detailsschoolAddress"
                style="@style/middleTextBlack"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/detailsschoolPhone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/detailsaddress"
                app:layout_constraintTop_toBottomOf="@id/detailsschoolName"
                app:layout_constraintVertical_weight="10" />

            <TextView
                android:id="@+id/detailsschoolPhone"
                style="@style/middleTextBlack"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/detailsphone"
                app:layout_constraintTop_toBottomOf="@id/detailsschoolAddress"
                app:layout_constraintVertical_weight="10" />

            <TextView
                android:id="@+id/detailsphone"
                style="@style/middleTextBlack"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:paddingRight="@dimen/middle_margin_horizontal"
                android:text="@string/phoneNumber"
                app:layout_constraintBottom_toBottomOf="@id/detailsschoolPhone"
                app:layout_constraintLeft_toRightOf="@id/detailsschoolPhone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/detailsschoolPhone"
                tools:ignore="RtlSymmetry" />


            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/detailsLocationCircle"
                android:layout_width="@dimen/smallCircle"
                android:layout_height="@dimen/smallCircle"
                app:layout_constraintBottom_toBottomOf="@id/detailsheartCircle"
                app:layout_constraintLeft_toRightOf="@id/detailsheartCircle"
                app:layout_constraintRight_toLeftOf="@id/detailsschoolName"
                app:layout_constraintTop_toTopOf="@id/detailsheartCircle"
                app:srcCompat="@drawable/blue_circle"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/detailsLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/detailsLocationCircle"
                app:layout_constraintEnd_toEndOf="@id/detailsLocationCircle"
                app:layout_constraintStart_toStartOf="@id/detailsLocationCircle"
                app:layout_constraintTop_toTopOf="@id/detailsLocationCircle"
                app:srcCompat="@drawable/ic_location_on_48px"
                app:tint="@color/white" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/detailsheartCircle"
                android:layout_width="@dimen/smallCircle"
                android:layout_height="@dimen/smallCircle"
                android:layout_margin="@dimen/middle_margin_vertical"
                app:layout_constraintBottom_toBottomOf="@id/detailsschoolName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/detailsLocationCircle"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/blue_circle"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/detailsheart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/detailsheartCircle"
                app:layout_constraintEnd_toEndOf="@id/detailsheartCircle"
                app:layout_constraintStart_toStartOf="@id/detailsheartCircle"
                app:layout_constraintTop_toTopOf="@id/detailsheartCircle"
                app:srcCompat="@drawable/ic_favorite_48px"
                app:tint="@color/white" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:id="@+id/detailedInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/schoolGeneralInfo">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/small_margin_vertical"
            app:cardElevation="@dimen/small_margin_vertical"
            android:layout_margin="@dimen/small_margin_horizontal"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/detailsTitle"
                    style="@style/middleTextBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detailsText"
                    style="@style/middleTextBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/middle_margin_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/detailsTitle" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/small_margin_horizontal"
                    android:src="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@id/detailsText" />

                <TextView
                    android:id="@+id/studentsNumberTitle"
                    style="@style/middleTextBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/studentsNumber_label"
                    app:layout_constraintBottom_toTopOf="@id/gradesList"
                    app:layout_constraintTop_toBottomOf="@id/detailsText" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/gradesList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/middle_margin_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/studentsNumberTitle" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:src="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@id/studentsNumberTitle" />

                <TextView
                    android:id="@+id/honorsTitle"
                    style="@style/middleTextBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/honors"
                    app:layout_constraintTop_toBottomOf="@id/gradesList" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/honorsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/middle_margin_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/honorsTitle" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>


    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="@id/detailsGoBack"
        app:layout_constraintTop_toTopOf="@id/detailsGoBack"
        app:srcCompat="@drawable/rect_round_white"
        app:tint="@color/colorAccent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/detailsGoBack"
        style="@style/largeTextBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/middle_margin_horizontal"
        android:background="@drawable/click_square"
        android:gravity="center"
        android:text="@string/detailsGoBack"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>